# PeSAR

./: .gitattributes  .gitignore  LICENSE  README.md  demo.py  engine.py  main.py  pyproject.toml  requirements-cuda.txt  requirements.txt  setup.py  visualization.py
.github/workflows/: publish.yaml  test.yaml
config/: yolo8n-bytetrack-cpu.yaml  yolo8n-bytetrack-cuda.yaml  yolo8n-bytetrack.yaml
datasets/: detection_utils.py
downloads/: yolo8n-416.onnx  yolo8n-640.onnx
models/: __init__.py  bytetrack.py  model.py  pipeline.py  waldo30.py
models/ssdlite/: __init__.py  model.py
pesar/: engine.py  visualization.py
pesar/models/: __init__.py  dummytrack.py  model.py
pesar/perception/: __init__.py  perception.py
pesar/perception/detection/: __init__.py  yolo.py
pesar/perception/detection/yolo/: model.py  onnx_yolo.py
pesar/perception/tracking/: __init__.py  bytetrack.py
pesar/util/: __init__.py
pipeline/: __init__.py  pipeline.py
pipeline/detectors/: __init__.py  yolo.py
pipeline/trackers/: __init__.py  bytetrack.py
pisar/: pyvenv.cfg
scripts/: run_sliced_inference.py
tests/: test_basic.py
util/: __init__.py  config.py  model_loader.py
