[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PeSAR"
version = "0.1.0"
description = "PeSAR: A Python package for ..."
authors = [{ name = "Erkan Adali", email = "erkanadali91@gmail.com" }]
readme = "README.md"
requires-python = ">=3.7"
homepage = "https://github.com/eadali/PeSAR"
license = { text = "MIT" }

[project.urls]
"Homepage" = "https://github.com/eadali/PeSAR"

[tool.setuptools]
packages = ["pesar"]

[tool.setuptools.dependencies]
# List your dependencies here, e.g.:
# numpy = ">=1.18.0"