[project]
name = "PeSAR"
version = "0.1.0"
description = "PeSAR: Perception for Aerial Search and Rescue"
authors = [{ name = "Erkan Adali", email = "erkanadali91@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.urls]
"Homepage" = "https://github.com/eadali/PeSAR"