[project]
name = "PeSAR"
version = "0.1.0"
description = "PeSAR: Perception for Aerial Search and Rescue"
authors = [{ name = "Erkan Adali", email = "erkanadali91@gmail.com" }]
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
dependencies = [
    "opencv-python-headless",
    "onnxruntime",
    "supervision",
    "sahi"
]

[project.urls]
Homepage = "https://github.com/eadali/PeSAR"

[tool.setuptools]
packages = ["pesar"]